...
  title: {
    id: 'screens.AppPasscode.NewPasscode.Splash.title',
    defaultMessage: 'What is App Passcode?',
  },
  continue: {
    id: 'screens.AppPasscode.NewPasscode.Splash.continue',
    defaultMessage: 'Continue',
  },
  description: {
    id: 'screens.AppPasscode.PasscodeIntro.description',
    defaultMessage:
      'App Passcode allows you to add an additional layer of security by requiring that you enter a passcode in order to open the CoMapeo app. You can define your own 5-digit passcode by turning on the feature below.',
  },
...
