...
            currentTab?.name === 'ObservationsList' ? COMAPEO_BLUE : MEDIUM_GREY
          }
          height={BUTTON_SIZE}
        />
      </TouchableOpacity>
      <TouchableOpacity
        testID="tabBarButtonMap"
        accessibilityLabel="Go to map."
        hitSlop={HIT_SLOP}
        style={styles.buttonStyle}
        onPress={onPressMap}>
        <MaterialIcons
          color={
...
          size={BUTTON_SIZE}
          name="map"
        />
      </TouchableOpacity>
      <TouchableOpacity
        hitSlop={HIT_SLOP}
        testID="tabBarButtonCamera"
        accessibilityLabel="Go to camera."
        style={styles.buttonStyle}
        onPress={() => navigation.navigate('Camera')}>
        <MaterialIcons
          color={currentTab?.name === 'Camera' ? COMAPEO_BLUE : MEDIUM_GREY}
          size={BUTTON_SIZE}
...
