...
import {FormattedCoords} from '../sharedComponents/FormattedData';
import {Text} from '../sharedComponents/Text';

const m = defineMessages({
  gpsHeader: {
    id: 'screens.GpsModal.gpsHeader',
    defaultMessage: 'Current GPS Location',
    description: 'Header for GPS screen',
  },
  lastUpdate: {
    id: 'screens.GpsModal.lastUpdate',
    defaultMessage: 'Last update',
    description: 'Section title for time of last GPS update',
...
