...
import {usePasscodeLockout} from '../hooks/usePasscodeLockout';
import {useSecurityState} from '../contexts/SecurityStoreContext';

const m = defineMessages({
  enterPass: {
    id: 'screens.EnterPassword.enterPass',
    defaultMessage: 'Enter your passcode',
  },
  wrongPass: {
    id: 'screens.EnterPassword.wrongPass',
    defaultMessage: 'Incorrect Passcode ',
  },
  lockoutMessage: {
...
      {loading ? (
        <View style={styles.loadingContainer}>
          <LoadingIndicator size="large" />
        </View>
      ) : (
        <PasscodeInput
          testID="SETTINGS.auth-passcode-inp"
          error={error}
          inputValue={inputtedPass}
          onChangeTextWithValidation={setInputWithValidation}
          editable={lockedOutMinutes <= 0}
        />
      )}
...
