...
  language: {
    id: '$1Screens.Settings.AppSettings.language',
    defaultMessage: 'Language',
  },
  coordinateSystem: {
    id: '$1Screens.Settings.AppSettings.coordinateSystem',
    defaultMessage: 'Coordinate System',
  },
  unitSystem: {
    id: '$1Screens.Settings.AppSettings.unitSystem',
    defaultMessage: 'Unit System',
  },
  earlyAccess: {
...
