...
  deviceNameLabel: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.deviceNameLabel',
    defaultMessage: 'Edit Device Name',
  },
  discardChangesAlertTitle: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.discardChangesAlertTitle',
    defaultMessage: 'Discard changes?',
  },
  discardChangesAlertConfirmText: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.discardChangesAlertConfirmText',
    defaultMessage: 'Discard Changes',
  },
  discardChangesAlertCancelText: {
...
        headerRight: () => {
          return isPending ? (
            <IconButton>
              <LoadingIndicator size="large" />
            </IconButton>
          ) : (
            <IconButton testID="save-icon" onPress={onSubmit}>
              <SaveIcon />
            </IconButton>
          );
        },
      });
    },
...
