appId: com.comapeo.dev
---
- runFlow:
    when:
      visible: '.*8081.*'
    commands:
      - tapOn: '.*8081.*'
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Toggle Performance Monitor'
    commands:
      - swipe:
          from:
            text: '.*CoMapeo.*'
          direction: DOWN
